# local-ta

./: .gitignore  AGENTS.md  README.md
.cursor/rules/: local-llm-stack.mdc
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/lib/: api.ts
backend/: pyproject.toml
backend/app/: config_loader.py  main.py  ollama_manager.py
backend/app/api/routers/: health.py  rag.py  storage.py
backend/app/config/: __init__.py  settings.py
backend/app/db/chroma/: client.py
backend/app/db/sqlite/: init.py
backend/app/logging/: setup.py
backend/app/services/rag/: index.py
backend/app/utils/: storage.py
backend/tests/: test_app_integration.py  test_health.py  test_rag_router.py  test_storage_router.py  test_storage_utils.py
configs/: app.yaml  env.example
data/sources/: sample.txt
docker/ollama/: compose.yaml
docs/: api.md  architecture.md  security.md
scripts/: ensure_ollama.sh
