[project]
name = "local-ta-backend"
version = "0.1.0"
description = "Local TA backend with FastAPI and Ollama model management"
requires-python = ">=3.11"
authors = [{ name = "local-ta" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
ensure-ollama = "app.ollama_manager:cli_main"

[tool.uv]
index-url = "https://pypi.org/simple"
package = true


